<resources>
    <string name="app_name">Call Manager</string>
    <string name="messages_title">Hazır Mesajlar</string>
    <string name="new_message_dialog">Yeni Hazır Mesaj</string>
    <string name="menu_title">İşlem Seç</string>
    <string name="edit">Düzenle</string>
    <string name="not_change">Bu metin Değiştirilemez!</string>
    <string name="dialog_add_button">Ekle</string>
    <string name="created_manager">Manager Oluşturuldu.</string>
    <string name="delete">Sil</string>
    <string name="pazar">Pazar</string>
    <string name="pazartesi">Ptesi</string>
    <string name="sali">Salı</string>
    <string name="carsamba">Çarş</string>
    <string name="persembe">Perş</string>
    <string name="cuma">Cuma</string>
    <string name="cumartesi">Ctesi</string>
    <string name="null_text">Boş bırakalamaz.</string>
    <string name="blocked_calls">Engellenen Çağrılar</string>
    <string name="admob_banner_id">ca-app-pub-2323838972684036/8968147314</string>
    <string name="reminder">Manager Hatırlatıcı</string>
    <string name="busy">Gelen Çağrılar Meşgule Düşer!</string>
    <string name="manager_created_notif">saatleri arasında manager kurulu</string>
</resources>
